--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "next": "15.3.2",
+    "axios": "^1.6.2",
+    "socket.io-client": "^4.7.2",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16"
   }
 }
